# agy_orchestrator

./: .gitignore  .manifest.json  AGENTS.md  Cargo.toml  Dioxus.toml  INSTALL.md  README.md  apply_refactoring.py  build.rs  context.md  context_history.md  install.sh  refactoring_plan.md  refactoring_plan_issue.md  refactoring_plan_persistent_chat.md  refactoring_plan_project.md  refactoring_spec.md  report.md  review_project.md  uninstall.sh
.antigravitycli/: 00e46a2d-e821-43a1-9e54-4b13687a7c71.json  99897279-44b6-43d5-8f81-5f4fa4720696.json
.github/workflows/: release.yml
assets/: tailwind.css
docs/: architecture.md  refactoring_plan.md  refactoring_review.md
public/home/wimvm/works/agy_orchestrator/assets/: tailwind.css
src/: cli.rs  daemon.rs  dashboard.html  health.rs  issue.rs  main.rs  models.rs  server_fns.rs  state.rs  upgrade.rs
src/backend/: agy_runner.rs  chat_session.rs  cli.rs  daemon.rs  health.rs  issue.rs  mod.rs  state.rs  system_instructions_template.md  upgrade.rs  vault.rs
src/backend/commands/: daemon.rs  harness.rs  issue.rs  memory.rs  mod.rs  project.rs  skill.rs  spawn.rs  upgrade.rs  utils.rs
src/frontend/: app.rs  mod.rs
src/frontend/components/: chat.rs  feedback.rs  issues.rs  logs.rs  mod.rs  projects.rs  vault.rs
