[package]
name = "agy-orchestrator"
version = "0.1.30"
edition = "2021"

[dependencies]
dioxus = { version = "0.7.9", features = ["fullstack", "macro", "html", "hooks", "signals", "launch", "document", "asset"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"], optional = true }
rexpect = { version = "0.7.1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3", features = ["futures"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
default = ["web"]
web = ["dioxus/web"]
server = ["dioxus/server", "dep:tokio", "dep:rexpect"]

[profile.release]
strip = "debuginfo"

